<resources>
    <!--  APP  -->
    <string name="app_name">Estoque Certo</string>
    <string name="next_page">Próximo</string>
    <string name="back_page">Voltar</string>
    <string name="save">Salvar</string>
    <string name="login">LOGIN</string>
    <string name="finalizar">Finalizar</string>
    <string name="atualizar">Atualizar</string>
    <string name="example_full_name">Nome Completo</string>
    <string name="example_number">Telefone</string>
    <string name="example_salary">Salário</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="terms">Eu li e concordo com os termos de uso.</string>

    <!--  Produto  -->
    <string name="product_name">Produtos</string>
    <string name="product_new">Novo Produto</string>
    <string name="product_edit">Editar Produto</string>
    <string name="product_description_1">Dados Gerais</string>
    <string name="product_description_2">Estoque</string>
    <string name="product_description_3">Preço</string>

    <!--  Extrato  -->
    <string name="extract_name">Extrato</string>
    <string name="extract_description">Histórico de Lançamento</string>
    <string name="extract_name_recipe">Nova Receita</string>
    <string name="extract_name_expense">Nova Despesa</string>

    <!-- Cadastro -->
    <string name="e_mail">e-mail</string>
    <string name="email_value">sollute2@gmail.com</string>
    <string name="senha">sollute123456</string>
    <string name="possui">Já possui conta?</string>
    <string name="entre">Entre na sua conta</string>
    <string name="sollute">Sollute FAKE</string>
    <string name="nome_fantasia">nome fantasia</string>
    <string name="social">razão social</string>
    <string name="sollute_sa">Sollute SA FAKE</string>
    <string name="confirme_sua_senha">confirme sua senha</string>
    <string name="cnpj">33099701000189</string>
    <string name="cnpj_nome">CNPJ</string>
    <string name="telefone_celular">telefone celular</string>
    <string name="numero">(11) 98099-2290</string>
    <string name="cep">CEP</string>
    <string name="sp">SP</string>
    <string name="uf">UF</string>
    <string name="cidade">cidade</string>
    <string name="sao_paulo">São Paulo</string>
    <string name="logradouro">logradouro</string>
    <string name="nome_logradouro">Rua Haddock Lobo, 595</string>
    <string name="ponto_referencia">ponto de referência</string>
    <string name="referencia">próximo à avenida paulista</string>
    <string name="finish">FINALIZAR</string>
    <string name="nome_fantasia_user">Nome Fantasia:</string>
    <string name="user_social">Razão Social:</string>
    <string name="cnpj_user">CNPJ:</string>
    <string name="cadastro">CADASTRO</string>
    <string name="titulo_senha">senha</string>
    <string name="text_cep">20260130</string>

    <!--  Cliente  -->
    <string name="client_description_1">Dados Gerais</string>
    <string name="client_new">Novo Cliente</string>
    <string name="client_edit">Editar Cliente</string>
    <string name="client_name">Clientes</string>

    <!-- Login -->
    <string name="login_description">Login</string>
    <string name="entrar">ENTRAR</string>
    <string name="ainda_n_possui_conta">Ainda não possui conta?</string>
    <string name="criar_agora">Cria a sua agora</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>

    <!--  Fornecedor  -->
    <string name="provider_description_1">Dados Gerais</string>
    <string name="provider_new">Novo Fornecedor</string>
    <string name="provider_edit">Editar Fornecedor</string>
    <string name="provider_name">Fornecedores</string>
    <string name="provider_yours">Seus Fornecedores</string>

    <!--  Funcionario  -->
    <string name="employee_name">Funcionário</string>
    <string name="employee_description">Dados Gerais</string>
    <string name="employee_new">Novo Funcionário</string>
    <string name="employee_edit">Editar Funcionário</string>
    <string name="employee_cpf">CPF</string>

    <!-- Dashboard -->
    <string name="dash_chart">Gráficos</string>

    <!-- Telas inicias -->
    <string name="sub_titulo">Gerenciando sua empresa com inteligência</string>
    <string name="button_comecar">COMEÇAR</string>
    <string name="s1_titulo">DOMINE A ORGANIZAÇÃO DA SUA EMPRESA</string>
    <string name="s1_subtitulo">Mantenha a sua empresa organizada, com tudo em seu devido lugar, planeje-se de maneira inteligente. Tudo isso na palma da sua mão.</string>
    <string name="s2_titulo">INVISTA NO MELHOR PARA O SEU NEGÓCIO</string>
    <string name="s2_subtitulo">Frase mais explicativa, com um pouco mais de detalhes comparado a mensagem anterior</string>
    <string name="s3_titulo">EQUIPE DE SUPORTE DISPONÍVEL 24 HORAS POR DIA</string>
    <string name="s3_subtitulo">Nossos profissionais são treinados para prestarem o melhor service com o menor tempo possível à você.</string>

    <!--  Venda  -->
    <string name="sale_completed">Venda Finalizada</string>

    <!-- Menu -->
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="finalizar_venda">Finalizar Venda</string>
    <string name="adicionar_venda">Adicionar Venda</string>
    <string name="metodo_pagamento">Método de Pagamento</string>
    <string name="realizar_venda">Realizar Venda</string>
    <string name="produtos_mais_vendidos">Produtos mais vendidos</string>

</resources>
