<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.register.Register3Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cinza">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@drawable/borderbottom"
            android:bottomLeftRadius="20dp"
            android:bottomRightRadius="20dp"
            android:gravity="center"
            android:topLeftRadius="0dp"
            android:topRightRadius="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="43dp"
                android:src="@drawable/sollute" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="450dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="145dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/bordergray"
            android:paddingStart="9dp"
            android:paddingTop="9dp"
            android:paddingEnd="9dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/borderwhite"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/cadastro"
                    android:textAlignment="center"
                    android:textColor="@color/roxo"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/cep"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/background_header"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/background_header">

                    <EditText
                        android:id="@+id/etCep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/text_cep"
                        android:textColor="@color/background_text"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:hint="@string/uf"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/background_header"
                        app:endIconMode="none"
                        app:hintTextColor="@color/background_header">

                        <EditText
                            android:id="@+id/etUf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sp"
                            android:textColor="@color/background_text"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="2"
                        android:hint="@string/cidade"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/background_header"
                        app:endIconMode="none"
                        app:hintTextColor="@color/background_header">

                        <EditText
                            android:id="@+id/etCidade"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sao_paulo"
                            android:textColor="@color/background_text"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/logradouro"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/background_header"
                    app:endIconMode="none"
                    app:hintTextColor="@color/background_header">

                    <EditText
                        android:id="@+id/etLogradouro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nome_logradouro"
                        android:textColor="@color/background_text"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/ponto_referencia"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/background_header"
                    app:endIconMode="none"
                    app:hintTextColor="@color/background_header">

                    <EditText
                        android:id="@+id/etPontoRef"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/referencia"
                        android:textColor="@color/background_text"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="70dp"
                    android:gravity="bottom|center"
                    tools:ignore="ObsoleteLayoutParam">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/tres_pontos_3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="420dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="160dp"
                        tools:ignore="RtlHardcoded">

                        <ImageButton
                            android:id="@+id/goBack"
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="25dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:minWidth="48dp"
                            android:minHeight="48dp"
                            android:src="@drawable/chevron_left" />

                        <Button
                            android:id="@+id/btnNextPageRegisterProduct"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/background_header"
                            android:text="@string/finish" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/possui"
                        android:textFontWeight="700"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:targetApi="p" />

                    <TextView
                        android:id="@+id/tvLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="6dp"
                        android:paddingEnd="0dp"
                        android:text="@string/entre"
                        android:textColor="@color/roxo"
                        android:textFontWeight="700"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:targetApi="p" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
